K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-app-service
            port:
              number: 80
